- fixing footer text alignment issues

--- a/css/home.css
+++ b/css/home.css
@@ -528,6 +528,10 @@ ul.menu-item li {
     margin-top: 5px;
     padding-left: 38%;
 }
+.fb-twitter a{
+    text-decoration: none;
+
+}
 .fb-twitter:after{
     content:'';
     display:block;
@@ -540,8 +544,8 @@ ul.menu-item li {
 
 @media screen and (min-width: 768px){
     .fb-twitter {
-        margin-top: 0;
         float: right;
+        margin-top: -10px;
         padding: 0;
     }
 }
